fix several layout issues, font sizing, mobile styling

--- a/styles/_galleries.scss
+++ b/styles/_galleries.scss
@@ -112,7 +112,6 @@ html {
     color: hsla(0, 0%, 100%, 0.9);
     text-align: left;
     font-weight: 400;
-    font-size: 1.1em;
 }
 
 .quote_author {
