--- a/styles/style_2.scss
+++ b/styles/style_2.scss
@@ -58,7 +58,7 @@ body {
 }
 
 .text_body h4 {
-    color: hsla(0,0%,100%,0.9);
+    color:rgba(255, 255, 255, 0.9);
     text-emphasis: bold;
 }
 
@@ -73,7 +73,7 @@ mark { background-color: #D79922;}
 .team_members_container {
     padding-top: 2em;
     display: grid;
-    color: hsla(0,0%,100%,86%);
+    color: rgba(255, 255, 255, 0.9);
     align-items: center;
     margin-bottom: 7em;
 }
@@ -103,7 +103,7 @@ mark { background-color: #D79922;}
 }
 
 .val_bio_describe, .rey_bio_describe {
-    font-weight: 500;
+    font-weight: 400;
     text-align: left;
 }
 
